# song-state-observer

./: .gitignore  pyproject.toml
annotations/: annotations.json  annotations.txt
src/: models.py
src/song_state_observer/: evaluation.py  features.py  models.py  preprocess.py  validation.py
