[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song-state-observer"
version = "0.1.0"
description = "Unsupervised dynamic-regime segmentation of music via a from-scratch hidden semi-Markov model"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aayush Kumar" }]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hmmlearn>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]